--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,34 @@
+/* 
+*  CSS TABLE OF CONTENTS
+*   
+*   1.0 - Body
+*   2.0 - Header
+*   3.0 - Figure
+*   4.0 - Section
+*   5.0 - Articles
+*   6.0 - Benefits
+*   7.0 - Footer
+*/
+
+/*** 1.0 - Global ***/
+/* Universal Selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Element selectors */
 body {
     background-color: #d9dcd6;
 }
 
+p {
+    font-size: 16px;
+}
+
+/*** 2.0 - Header ***/
+/* Element selectors */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,6 +41,7 @@ header h1 {
     font-size: 48px;
 }
 
+/* Headers and H1 with a class "seo" text color is changed to white */
 header h1 .seo {
     color: #d9dcd6;
 }
@@ -46,10 +68,8 @@ header div ul li a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
+/*** 3.0 - Figure ***/ 
+/* image set as background for height and width of figure */
 figure img {
     height: 800px;
     width: 100%;
@@ -59,6 +79,7 @@ figure img {
     background-position: center;
 }
 
+/* Float classes set to float images within the article */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,11 +90,72 @@ figure img {
     margin-left: 25px;
 }
 
+/*** 4.0 - Section ***/
+/* ID selector for main section */
 #main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+/*** 5.0 - Articles ***/
+/* Class selectors for the articles */
+.search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.search-engine-optimization img {
+    max-height: 200px;
+}
+
+.online-reputation-management img {
+    max-height: 200px;
+}
+
+.social-media-marketing img {
+    max-height: 200px;
+}
+
+.search-engine-optimization h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*** 6.0 Benefits ***/
+/* Class selectors for the Aside element */
 
 .benefits {
     margin-right: 20px;
@@ -134,59 +216,7 @@ figure img {
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/*** 7.0 Footer ***/
 
 footer {
     padding: 30px;
