--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,4 @@
-/* 
-*  CSS TABLE OF CONTENTS
-*   
-*   1.0 - Body
-*   2.0 - Header
-*   3.0 - Figure
-*   4.0 - Section
-*   5.0 - Articles
-*   6.0 - Benefits
-*   7.0 - Footer
-*/
+
 
 /*** 1.0 - Global ***/
 /* Universal Selector */
@@ -46,6 +36,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
+/* ID selector for the navigation bar */
 header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -92,6 +83,7 @@ figure img {
 
 /*** 4.0 - Section ***/
 /* ID selector for main section */
+/* CSS for the section class and what contains the main images and articles*/
 #main {
     width: 75%;
     display: inline-block;
@@ -156,7 +148,7 @@ figure img {
 
 /*** 6.0 Benefits ***/
 /* Class selectors for the Aside element */
-
+/* CSS for the aside class and what contains the benefits images and articles*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -217,7 +209,7 @@ figure img {
 }
 
 /*** 7.0 Footer ***/
-
+/* Element selector for the footer */
 footer {
     padding: 30px;
     clear: both;
